tests/sources/invalid/types/field_access_on_primitive.fire
// Semantic error: field access on a non-class (primitive) type.

void field_access_on_primitive() {
    int32 x = 5;
    int32 y = x.bits;  //~ ERROR FS-SEM-0010 @17
}
